# systematic-crypto

./: .gitignore  CLAUDE.md  pyproject.toml
configs/: instruments.yaml  paper.yaml  portfolio.yaml  rules.yaml
scripts/: fetch_data.py  run_backtest.py  run_ml_backtest.py  run_multi_instrument_backtest.py  run_multi_rule_backtest.py  run_paper_trading.py  run_phase2_walkforward.py  run_promotion_gate.py
src/backtest/: engine.py  multi_instrument.py  phase2_walkforward.py  significance.py  walk_forward.py
src/dashboard/: app.py
src/data/: fetcher.py  hyperliquid_data.py
src/execution/: exchange_base.py  hyperliquid.py
src/indicators/: technical.py  volatility.py
src/ml/: __init__.py  guardrails.py  trainer.py
src/portfolio/: buffering.py  cost_model.py  handcraft.py  instrument_weights.py  position_sizing.py
src/risk/: risk_manager.py
src/rules/: base.py  breakout.py  carry.py  ewmac.py  mean_reversion.py  ml_forecast.py  momentum.py  scaling.py
src/system/: scheduler.py  trade_logger.py  trading_system.py
tests/: test_backtest_engine.py  test_fetcher.py  test_forecasts.py  test_ml_guardrails.py  test_phase2_rules.py  test_phase2_walkforward.py  test_phase3_instruments.py  test_phase4_ml.py  test_phase5_production.py  test_position_sizing.py  test_promotion_gate_cli.py  test_risk.py  test_trading_system_integration.py
